[tmux] tmux copy to clipboard without dependency

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set-window-option -g automatic-rename on
 
 # clipboard
 # set-option -g default-command "zsh"
-bind C-y run-shell 'PATH=$(ghq root)/github.com/thash/bin:$PATH; copy_to_clipboard'
+bind C-y run-shell 'cat /dev/null > $HOME/.clipbd; tmux save-buffer $HOME/.clipbd; cat $HOME/.clipbd | pbcopy'
 
 # Status line
 set -g status-style bg=black,fg=white,dim
